--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -10,4 +10,22 @@
 #                                                                              #
 # **************************************************************************** #
 
+COMPILER = g++
+CFLAGS = -Wall -Wextra -std=c++98
 
+TARGET = megaphone
+SRC = megaphone.cpp
+OBJ = $(SRC:.cpp=.o)
+
+all: $(TARGET)
+
+$(TARGET): $(OBJ)
+	$(COMPILER) $(CFLAGS) -o $(TARGET) $(OBJ)
+
+%.o: %.cpp
+	$(COMPILER) $(CFLAGS) -c $< -o $@
+
+clean:
+	rm -f $(OBJ) $(TARGET)
+
+re: clean all
