--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-COMPILER = g++
+COMPILER = c++
 CFLAGS = -Wall -Wextra -std=c++98
 
 TARGET = megaphone
