--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-COMPILER = g++
+COMPILER = c++
 
 TARGET = phonebook
 INC_DIR = includes
