--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -26,6 +26,9 @@ $(TARGET): $(OBJ)
 	$(COMPILER) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJ) $(TARGET)
+	rm -f $(OBJ)
+
+fclean:
+	rm -f $(TARGET)
 
 re: clean all
