Adds -werror flag for makefiles

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -15,7 +15,7 @@ COMPILER = c++
 TARGET = account
 SRC = Account.cpp tests.cpp
 OBJ = $(SRC:.cpp=.o)
-CFLAGS = -Wall -Wextra -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(TARGET)
 
